# lambda-slack-ai-bot

./: env.py  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml  slack-app.yaml  slack_keyword.py
entity/: app_mention_body.py  body_event.py
