[tool.poetry]
name = "lambda-slack-ai-bot"
version = "0.1.0"
description = ""
authors = ["sigma <seiya.sugimoto.free@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.125"
openai = "^1.34.0"
slack-bolt = "^1.19.0"
slack-sdk = "^3.28.0"
requests = "^2.32.3"
boto3-stubs = {extras = ["dynamodb"], version = "^1.34.125"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
